place order has done.

--- a/Movie_Exercise/Views/Admin/Index.cshtml
+++ b/Movie_Exercise/Views/Admin/Index.cshtml
@@ -8,4 +8,6 @@
 <h3>
     <br /><a class="LinkLine" asp-area="" asp-controller="Roles" asp-action="Index">Roles Manager</a><br />
     <br /><a class="LinkLine" asp-area="" asp-controller="Movies" asp-action="Index">Movies Manager</a><br />
+    <br /><a class="LinkLine" asp-area="" asp-controller="Customers" asp-action="Index">Customers Services</a><br />
+
 </h3>
