--- a/Movie_Exercise/Views/Cart/MakePaymentBtn.cshtml
+++ b/Movie_Exercise/Views/Cart/MakePaymentBtn.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h1>Payment Successful!</h1>
-<p>Thank you for your purchase</p>
+<p style="font-size:24px">Thank you for your purchase</p>
 
 
+<a class="nav-link text-dark" asp-area="" asp-controller="Movies" asp-action="Gallery">Back To Gallery</a>
