--- a/Movie_Exercise/Views/Cart/ViewCart.cshtml
+++ b/Movie_Exercise/Views/Cart/ViewCart.cshtml
@@ -66,7 +66,7 @@
         <div class="form-holder">
             <div class="form-content">
                 <div class="form-items">
-                    <h3>Register Today</h3>
+                    <h3>Delivery Information</h3>
                     <p>Fill in the data below.</p>
                     <form class="requires-validation" id="form-data"  method="POST" action="/Cart/CheckCustomer" novalidate>
                         <div class="col-md-12">
@@ -93,7 +93,7 @@
                         </div>
                         <br />
                         <div class="col-md-12">
-                            <input id="customer-BillingZip" class="form-control" type="number" name="BillingZip" placeholder="Billing Zip" required>
+                            <input id="customer-BillingZip" class="form-control" type="text" name="BillingZip" placeholder="Billing Zip" required>
                             <div class="valid-feedback">Billing Zip field is valid!</div>
                             <div class="invalid-feedback">Billing Zip field cannot be blank!</div>
                         </div>
@@ -109,7 +109,7 @@
                         </div>
                         <br />
                         <div class="col-md-12">
-                            <input id ="customer-DeliveryZip" class="form-control" type="number" name="DeliveryZip" placeholder="Delivery Zip" required>
+                            <input id="customer-DeliveryZip" class="form-control" type="text" name="DeliveryZip" placeholder="Delivery Zip" required>
                             <div class="valid-feedback">Delivery Zip field is valid!</div>
                             <div class="invalid-feedback">Delivery Zip field cannot be blank!</div>
                         </div>
@@ -120,7 +120,7 @@
                         </div>
                         <br />
                         <div class="col-md-12">
-                            <input id="customer-PhoneNumber" class="form-control" type="tel" name="PhoneNumber" placeholder="Phone Number" required>
+                            <input id="customer-PhoneNumber" class="form-control" type="text" name="PhoneNumber" placeholder="Phone Number" required>
                             <div class="valid-feedback">Phone Number field is valid!</div>
                             <div class="invalid-feedback">Phone Number field cannot be blank!</div>
                         </div>
