--- a/Movie_Exercise/Views/Movies/Index.cshtml
+++ b/Movie_Exercise/Views/Movies/Index.cshtml
@@ -10,7 +10,9 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<input class="form-control" id="myInput" type="text" placeholder="Search..">
+<br>
+<table class="table table-bordered table-striped">
     <thead>
         <tr>
             <th>
@@ -34,7 +36,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="myTable">
 @foreach (var item in Model) {
         <tr>
             <td>
@@ -64,3 +66,17 @@
 }
     </tbody>
 </table>
+
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $("#myInput").on("keyup", function () {
+                var value = $(this).val().toLowerCase();
+                $("#myTable tr").filter(function () {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+            });
+        });
+    </script>
+}
