--- a/Movie_Exercise/Views/Shared/_Layout.cshtml
+++ b/Movie_Exercise/Views/Shared/_Layout.cshtml
@@ -32,6 +32,11 @@
     @*paymentform*@
     @*<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">*@
     <link href="~/css/payment_form.css" rel="stylesheet" />
+
+    @*Owl Carousel*@
+    <link href="~/css/owl.carousel.css" rel="stylesheet" />
+    <link href="~/css/owl.carousel.min.css" rel="stylesheet" />
+    <link href="~/css/owl.theme.default.min.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -93,6 +98,10 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    @*Owl Carousel*@
+    <script src="~/js/owl.carousel.min.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
