owl carousel is done

--- a/Movie_Exercise/Views/Home/Index.cshtml
+++ b/Movie_Exercise/Views/Home/Index.cshtml
@@ -38,8 +38,23 @@
 
 <!--------------------------The 5 Cheapest movies based on release year-------------------------->
 <div class="col-md-12">
-    <h3>  CHEAPEST MOVIES</h3>
-    <div>
+    <h3><b>CHEAPEST MOVIES</b></h3>
+    <hr style="height:5px; color:red; opacity:1">
+    @*<div class="owl-carousel owl-theme">
+        <div class="item"><h4>1</h4></div>
+        <div class="item"><h4>2</h4></div>
+        <div class="item"><h4>3</h4></div>
+        <div class="item"><h4>4</h4></div>
+        <div class="item"><h4>5</h4></div>
+        <div class="item"><h4>6</h4></div>
+        <div class="item"><h4>7</h4></div>
+        <div class="item"><h4>8</h4></div>
+        <div class="item"><h4>9</h4></div>
+        <div class="item"><h4>10</h4></div>
+        <div class="item"><h4>11</h4></div>
+        <div class="item"><h4>12</h4></div>
+    </div>*@
+    <div class="owl-carousel owl-theme">
         @await Component.InvokeAsync("CheapestMovies")
     </div>
 </div>
@@ -54,3 +69,29 @@
     </div>
 </div>
 <br />
+
+
+
+
+@section Scripts {
+    <script>
+        $(".owl-carousel").owlCarousel({
+            loop: true,
+            margin: 10,
+            nav: true,
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 3
+                },
+                1000: {
+                    items: 5
+                }
+            }
+        })
+    </script>
+}
+
+
