--- a/Movie_Exercise/Views/Home/Index.cshtml
+++ b/Movie_Exercise/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
 <!-------------------------- Most popular Movie-------------------------->
 <div class="col-md-12">
     <h3>  MOST POPULAR MOVIE</h3>
+    <hr style="height:5px; color:red; opacity:1">
     <div>
         @await Component.InvokeAsync("MostPopulareMovie")
     </div>
@@ -20,8 +21,9 @@
 
 <!--------------------------The 5 newest movies based on release year-------------------------->
 <div class="col-md-12">
-    <h3>  Latest MOvIES</h3>
-    <div>
+    <h3><b>LATEST MOVIES</b></h3>
+    <hr style="height:5px; color:white; opacity:1">
+    <div class="owl-carousel owl-theme">
         @await Component.InvokeAsync("NewestMovies")
     </div>
 </div>
@@ -29,8 +31,9 @@
 
 <!--------------------------The 5 Oldest movies based on release year-------------------------->
 <div class="col-md-12">
-    <h3>  Oldest MOvIES</h3>
-    <div>
+    <h3> <b> OLDEST MOVIES</b></h3>
+    <hr style="height:5px; color:Blue; opacity:1">
+    <div class="owl-carousel owl-theme">
         @await Component.InvokeAsync("OldestMovies")
     </div>
 </div>
@@ -40,20 +43,6 @@
 <div class="col-md-12">
     <h3><b>CHEAPEST MOVIES</b></h3>
     <hr style="height:5px; color:red; opacity:1">
-    @*<div class="owl-carousel owl-theme">
-        <div class="item"><h4>1</h4></div>
-        <div class="item"><h4>2</h4></div>
-        <div class="item"><h4>3</h4></div>
-        <div class="item"><h4>4</h4></div>
-        <div class="item"><h4>5</h4></div>
-        <div class="item"><h4>6</h4></div>
-        <div class="item"><h4>7</h4></div>
-        <div class="item"><h4>8</h4></div>
-        <div class="item"><h4>9</h4></div>
-        <div class="item"><h4>10</h4></div>
-        <div class="item"><h4>11</h4></div>
-        <div class="item"><h4>12</h4></div>
-    </div>*@
     <div class="owl-carousel owl-theme">
         @await Component.InvokeAsync("CheapestMovies")
     </div>
@@ -64,6 +53,7 @@
 <!--------------------------The Top Customer that make the most expensive order-------------------------->
 <div class="col-md-12">
     <h3>  TopCustomer</h3>
+    <hr style="height:5px; color:red; opacity:1">
     <div>
         @await Component.InvokeAsync("TopCustomer")
     </div>
