--- a/Movie_Exercise/Views/Shared/Components/MostPopulareMovie/Index.cshtml
+++ b/Movie_Exercise/Views/Shared/Components/MostPopulareMovie/Index.cshtml
@@ -2,6 +2,6 @@
 
 
 <div>
-    <img src="~/Images/@Model.ImageFile" />
+    <img src="~/Images/@Model.ImageFile" style="width:200px; hight:auto"/>
     <h3>@Model.Title</h3>
 </div>
