--- a/Movie_Exercise/Views/Shared/_Layout.cshtml
+++ b/Movie_Exercise/Views/Shared/_Layout.cshtml
@@ -102,6 +102,7 @@
     @*Owl Carousel*@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+    <script src="~/js/prefixfree.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 
